# Path-Tracer

./: .gitignore  CMakeLists.txt  Main.cpp  Maths.h  World.cpp  World.h
RenderObjects/: Plane.cpp  RenderObject.h  Sphere.cpp  Sphere.h
src/: World.cpp  World.h
src/RenderObjects/: Plane.h  RenderObject.cpp  RenderObject.h
